--- a/Testetarde.ipynb
+++ b/Testetarde.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwDR7HClcWkO5e+TwesLvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +29,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "9O93vN1NFYag",
+        "outputId": "a87d83b7-f719-40af-8825-cf5f9d31b109",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "9O93vN1NFYag",
-        "outputId": "a87d83b7-f719-40af-8825-cf5f9d31b109"
+        }
       },
       "outputs": [
         {
@@ -50,13 +49,36 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "hsausaisjaisj"
+        "print(\"Grupo 2 esteve aqui\")"
       ],
       "metadata": {
-        "id": "yyxMeqyHHPZ_"
-      }
+        "id": "thYY7u7wI6Hd",
+        "outputId": "c5906516-4d3e-4d6f-e9ff-9ce3e4caafc0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Grupo 2 esteve aqui\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NJlwgPCLI9az"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
